# rl-synth-programmer

./: README.md  pyproject.toml  sitecustomize.py
src/rl_synth_programmer/: __init__.py  agent.py  cli.py  config.py  curriculum.py  env.py  host.py  logging_utils.py  manifest.py  optional_deps.py  parallel_rollout.py  reward.py  smoke.py  training.py
tests/: test_cli.py  test_curriculum.py  test_env.py  test_host.py  test_reward.py  test_training.py
