[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-synth-programmer"
version = "0.1.0"
description = "Reinforcement learning environment and agents for synth programming via VST3."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "tqdm>=4.66",
]

[project.optional-dependencies]
runtime = [
  "pedalboard>=0.9.18",
  "mido>=1.3.2",
  "gymnasium>=0.29.1",
]
ml = [
  "torch>=2.2",
  "torchcodec>=0.8.1",
  "lightning>=2.2",
  "msclap>=1.3.3",
  "soundfile>=0.12.1",
  "tensorboard>=2.16",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
rl-synth = "rl_synth_programmer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
